# cpp-swift-experiment

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift  readme.md  sample.proto  setup-metal-cpp.ps1  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/workflows/: analysis.yml  build.yml  cmake.yml  native_mac.yml  native_only.yml  swift.yml  swift_mac.yml
Sources/: .gitignore
Sources/scone/: Log.swift  Module.swift
Sources/scone_native/: binding.cpp
Tests/: Test1.swift  Test2.swift  Test3.swift
Tests/sconeTests/: TestCase3.swift
Tests/scone_nativeTests/: SymbolTest.swift
docs/: .gitignore
platform-apple/: AsyncRoutines.swift  BaguetteBridge.swift  CryptoRoutines.swift  DecoderRoutines.swift  HostInfo.swift  Information.swift
scripts/: setup-metal-cpp.ps1
src/: .gitignore  Baguette.h  bridge.hpp  bridge_apple.cpp  swift_crypto.cpp  swift_crypto.hpp  swift_decoder.cpp  swift_decoder.hpp  swift_hostinfo.cpp  swift_hostinfo.hpp
test/: InformationTests.swift  TestCase1.swift  baguette_test.cpp
